[gd_scene load_steps=14 format=3 uid="uid://cm208i2oyjrct"]

[ext_resource type="PackedScene" uid="uid://23cc1xm0v5jp" path="res://characters/enemy/enemy_walker.tscn" id="1_47dgo"]
[ext_resource type="Texture2D" uid="uid://dhlkp2vwhtqpp" path="res://characters/enemy/hotdog/HotDog1.png" id="2_bgvra"]
[ext_resource type="AudioStream" uid="uid://culw6y08ooo7s" path="res://audio/sounds/sad_dog_1.wav" id="2_y8un6"]
[ext_resource type="AudioStream" uid="uid://dvl876ufhnffk" path="res://audio/sounds/sad_dog_2.wav" id="3_73c7m"]
[ext_resource type="Texture2D" uid="uid://bsg0n5c4p4stf" path="res://characters/enemy/hotdog/HotDog2.png" id="3_nw7ee"]
[ext_resource type="AudioStream" uid="uid://cjwahiy2j2af3" path="res://audio/sounds/sad_dog_die.wav" id="4_6x326"]
[ext_resource type="Texture2D" uid="uid://b12wq84i42c4i" path="res://characters/enemy/hotdog/HotDog.png" id="4_tgoi2"]
[ext_resource type="AudioStream" uid="uid://bekxwncrgx2nr" path="res://audio/sounds/impact_celery.wav" id="5_vh1cq"]
[ext_resource type="Script" path="res://characters/enemy/states/walker_idle.gd" id="9_8fhdv"]
[ext_resource type="Script" path="res://characters/enemy/states/walker_walk.gd" id="10_2o6vf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx30w"]
size = Vector2(32, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_057po"]
size = Vector2(30, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cxn4"]
size = Vector2(24, 12)

[node name="HotDog" instance=ExtResource("1_47dgo")]
erratic_walking_amount = 3.0
speed = 25.0
hurt_vocalizations = Array[AudioStreamWAV]([ExtResource("2_y8un6"), ExtResource("3_73c7m")])
death_vocalization = ExtResource("4_6x326")
impact_sound = ExtResource("5_vh1cq")
death_pieces = Array[Resource]([ExtResource("3_nw7ee"), ExtResource("2_bgvra")])

[node name="BloodParticles" parent="." index="1"]
position = Vector2(0, -16)

[node name="Pivot" parent="." index="2"]
position = Vector2(0, -1)

[node name="Body" parent="Pivot" index="0"]
position = Vector2(-2, -12)
texture = ExtResource("4_tgoi2")
frame = 0

[node name="StateMachine" parent="." index="3"]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="3"]
script = ExtResource("9_8fhdv")

[node name="Move" type="Node" parent="StateMachine" index="4"]
script = ExtResource("10_2o6vf")

[node name="Hurtbox" parent="." index="4"]
position = Vector2(0, -1)

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(-1, -7.5)
shape = SubResource("RectangleShape2D_yx30w")

[node name="Hitbox" parent="." index="5"]
position = Vector2(0, -1)

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_057po")

[node name="CollisionShape2D" parent="." index="6"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_0cxn4")

[node name="ledge_check_right" parent="." index="7"]
position = Vector2(9, -1)

[node name="ledge_check_left" parent="." index="8"]
position = Vector2(-10, -1)

[node name="wall_check_left" parent="." index="9"]
position = Vector2(0, -11)

[node name="adjacent_ledge_check_left" parent="." index="10"]
position = Vector2(0, -11)

[node name="adjacent_ledge_check_right" parent="." index="11"]
position = Vector2(0, -11)

[node name="wall_check_right" parent="." index="12"]
position = Vector2(0, -11)

[editable path="Hurtbox"]
[editable path="Hitbox"]
